--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
+    "firebase": "^9.6.6",
+    "graphql": "^16.3.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "subscriptions-transport-ws": "^0.11.0",
+    "urql": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/ws": "^8.2.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
